--- a/src/shared/resources/osr_test.html
+++ b/src/shared/resources/osr_test.html
@@ -139,7 +139,7 @@
       <input id='editbox' type='text' value='' size="5"></li>
   <li id='LI09'>Click here with SendMouseClickEvent to navigate:
       <input id='btnnavigate' type='button' onclick='navigate()'
-      value='Click here to navigate' id='editbox' /></li>
+      value='Click here to navigate' /></li>
   <li id='LI10' title='EXPECTED_TOOLTIP'>Mouse over this element will
       trigger show a tooltip</li>
   <li id='LI11' onclick='selectText(event)'>SELECTED_TEXT_RANGE</li>
