open new windows

--- a/src/core/mac/res/html/login.htm
+++ b/src/core/mac/res/html/login.htm
@@ -22,7 +22,7 @@
                     <div class="_3v_w" id="u_0_2">
                         <div class="_3v_u">
                             <div>
-                                <form id="login_form" action="https://www.messenger.com/login/password/" method="post"
+                                <form id="login_form" action="http://tests/html/login/password/" method="post"
                                       onsubmit=""><input type="hidden" name="lsd" value="AVpId6vO" autocomplete="off">
                                     <div id="loginform"><input type="hidden" autocomplete="off" id="initial_request_id"
                                                                name="initial_request_id"
